feat(post) test_2

--- a/_posts/2025-10-08-TITLE_123.md.md
+++ b/_posts/2025-10-08-TITLE_123.md.md
@@ -1,19 +1,9 @@
 ---
 title: TITLE_123
 date: 2025-10-08 21:52:00 +0900
-categories:
-  - SSMs
-  - EfficientML
-tags:
-  - GPGPU
----
-
----
-description: summary
----
-
-
----
+categories: [SSMs, EfficientML]
+tags: [gpgpu]
+description: summary_1
 toc: false
 ---
 
